--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,22 +1,3 @@
-<h1>Torii Examples</h1>
+<h1>torii on ember-cli</h1>
 
-<h2>Torii: Example Usage</h2>
-
-<div class='providers'>
-  {{#each providers as |provider|}}
-    <div class='provider'>
-      <button {{action "authorize" provider}}>
-        {{provider}}
-      </button>
-    </div>
-  {{/each}}
-</div>
-
-<div class='auth-data'>
-  Auth data: {{#if authData}}
-    {<pre>{{inspect-object authData}}</pre>}
-  {{/if}}
-</div>
-<div>
-  Error data: {{error}}
-</div>
+<button {{action 'signIn' 'github-oauth2'}}>Sign in to github</button>
